--- a/src/app/components/create-card-sorting-test/create-card-sorting-test.component.css
+++ b/src/app/components/create-card-sorting-test/create-card-sorting-test.component.css
@@ -2,20 +2,16 @@
 
   height: 92%;
   text-align: center;
-  /*display: flex;*/
-  /*flex-direction: column;*/
-  /*justify-content: space-between;*/
+  overflow: auto;
 
 }
 
 #testsForm {
 
   margin-top: 1%;
-  /*flex: 30;*/
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  overflow: auto;
 
 }
 
@@ -64,3 +60,8 @@
   box-shadow: none !important;
 
 }
+
+.addCSButton {
+  margin-bottom: 1%;
+}
+
