--- a/src/app/components/view-tests/view-tests.component.html
+++ b/src/app/components/view-tests/view-tests.component.html
@@ -72,3 +72,7 @@
           (click)="addGroup()">Add Group</button>
 </div>
 
+<div id="submitBtn">
+  <button id="submitGroups" class="submit-btn" color="primary" mat-raised-button type="submit"
+          (click)="submitGroups()">Save Groups</button>
+</div>
