Finall view - communication with db dont work

--- a/src/app/components/view-tests/view-tests.component.html
+++ b/src/app/components/view-tests/view-tests.component.html
@@ -12,8 +12,8 @@
       <div cdkDropListGroup>
         <section *ngFor="let group of groupedTests; let i = index" fxLayout="column">
 
-          <mat-form-field class="groupName" id="{{names[i]}}" apperance="standard" [style.fontSize.px]=18>
-            <input matInput type="text"  placeholder="{{names[i]}}"/>
+          <mat-form-field class="groupName"  apperance="standard" [style.fontSize.px]=18>
+            <input matInput type="text" id="{{names[i]}}" placeholder="{{names[i]}}"/>
           </mat-form-field>
 
           <div class="container">
@@ -41,8 +41,8 @@
           </div>
         </section>
 
-        <mat-form-field class="groupName" id="new" apperance="standard" [style.fontSize.px]=18>
-          <input matInput type="text"  placeholder="new"/>
+        <mat-form-field class="groupName"  apperance="standard" [style.fontSize.px]=18>
+          <input matInput type="text" id="new"  placeholder="new"/>
         </mat-form-field>
 
         <div class="container">
