--- a/src/app/components/perform-card-sorting-test/perform-card-sorting-test.component.html
+++ b/src/app/components/perform-card-sorting-test/perform-card-sorting-test.component.html
@@ -3,10 +3,10 @@
 
     <mat-form-field appearance="standard" [style.fontSize.px]=18>
       <label>
-        <input matInput type="bigint" [(ngModel)]="testID" id="intInput" placeholder="Card Sorting test id"/>
+        <input matInput type="bigint" [(ngModel)]="testID" id="intInput" placeholder="Card sorting test id"/>
       </label>
     </mat-form-field>
-    <a id="getButton" [disabled]="testLoaded" mat-flat-button color="primary" (click)="getTest()"> Load a cardsorting test </a>
+    <a id="getButton" [disabled]="testLoaded" mat-flat-button color="primary" (click)="getTest()"> Load a card sorting test </a>
 
   </div>
   <div id="test">
