--- a/src/app/components/view-results-of-test/view-results-of-test.component.html
+++ b/src/app/components/view-results-of-test/view-results-of-test.component.html
@@ -2,7 +2,7 @@
 
   <mat-form-field appearance="standard" [style.fontSize.px]=18>
     <label>
-      <input matInput type="bigint" [(ngModel)]="testID" id="intInput" placeholder="Card Sorting Test id"/>
+      <input matInput type="bigint" [(ngModel)]="testID" id="intInput" placeholder="Card sorting test id"/>
     </label>
   </mat-form-field>
   <a id="getButton" mat-flat-button color="primary" (click)="getResults()"> Get Results </a>
