--- a/src/app/components/view-results-of-test/view-results-of-test.component.css
+++ b/src/app/components/view-results-of-test/view-results-of-test.component.css
@@ -1,36 +1,33 @@
 #import {
+
   margin-left: 0.5%;
+
 }
 
 #results-view {
+
   width: 100%;
   text-align: center;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+
 }
 
 #table {
+
   box-shadow: none !important;
   text-align: center;
-  width: 30%;
+  width: 50%;
   height: 100%;
   flex: 1;
+
 }
 
 .tableHeader {
-  font-size: 100%;
-  text-align: center;
-}
 
-table, th , td  {
-  border: 1px solid grey;
-  border-collapse: collapse;
-  padding: 5px;
-}
-table tr:nth-child(odd) {
-  background-color: #f1f1f1;
-}
-table tr:nth-child(even) {
-  background-color: #ffffff;
+  font-size: 100%;
+  font-weight: bold;
+  text-align: center;
+
 }
