--- a/src/app/components/create-tests/create-tests.component.html
+++ b/src/app/components/create-tests/create-tests.component.html
@@ -84,7 +84,6 @@
 
           <div id="question">
         
-        
             <div class="questionText" style="display: inline" *ngIf="rawQuestion.type === 'text'">
         
               <mat-form-field class="inputField" appearance="standard" [style.fontSize.px]=14>
@@ -133,8 +132,10 @@
               <a class="button" mat-flat-button color="primary" *ngIf="rawQuestion.question.options.length != 0" (click)="removeOptionFromMultipleChoiceQuestion(i)"> Remove an Option </a>
         
             </div>
+
+            
         
-            <div class="questionText" style="display: inline" *ngIf="rawQuestion.type === 'multipleAnswer'">
+            <div class="questionText" style="display: inline;" *ngIf="rawQuestion.type === 'multipleAnswer'">
         
         
               <mat-form-field  class="inputField" appearance="standard" [style.fontSize.px]=14>
@@ -157,8 +158,12 @@
         
               <a class="button" mat-flat-button color="primary" *ngIf="rawQuestion.question.options.length != 0" (click)="removeOptionFromMultipleAnswerQuestion(i)"> Remove an Option </a>
         
+            
+            </div> 
+            <div id="imageButtonWrapper">
+              <a class="imageButton" color="primary" mat-mini-fab (click)="attachFile(rawQuestion)"><mat-icon #tooltip="matTooltip" matTooltip="Attach image...">image</mat-icon></a>
+              <input matInput disabled  type="text" [(ngModel)]="rawQuestion.imageName" *ngIf="rawQuestion.imageName" class="input"/>
             </div>
-        
             <div id="removeQuestionWrapper">
               <a id="removeQuestionButton" mat-mini-fab color="warn" (click)="removeQuestion(i)">
                 <mat-icon>clear</mat-icon>
@@ -166,12 +171,9 @@
             </div>
           </div>
         
-        
           <mat-divider *ngIf="i != rawQuestions.length - 1"></mat-divider>
         
-        </section>
-        
-        
+        </section>        
         <br/>
         
         <div id="buttonWrapper">
